syntax = "proto3";

package ai.metathings.service.sensor;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "sensor.proto";

message PatchRequest {
	google.protobuf.StringValue name = 1 [(validator.field) = {msg_exists: true}];
	map<string, SensorValue> config = 2;
}

message PatchResponse {
	Sensor sensor = 1;
}
