syntax = "proto3";

package ai.metathings.service.streamd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message DeleteRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
}
