syntax = "proto3";

package ai.metathings.service.streamd;
option go_package = "streamd";

import "google/protobuf/empty.proto";

import "create.proto";
import "delete.proto";
import "patch.proto";
import "get.proto";
import "list.proto";
import "list_for_user.proto";
import "start.proto";
import "stop.proto";

service StreamdService {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
	rpc Patch(PatchRequest) returns (PatchResponse) {}
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	rpc ListForUser(ListForUserRequest) returns (ListForUserResponse) {}
	rpc Start(StartRequest) returns (StartResponse) {}
	rpc Stop(StopRequest) returns (StopResponse) {}
}
